Fix overflow & reviews section responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
     --font-kaushan: 'Kaushan Script', cursive;
 }
 
+@theme {
+  --breakpoint-xs: 30rem;    /* 480px */
+}
+
 body{
   font-family: var(--font-body);
   background-color: white;
